--- a/291Project/291Project/291Project.csproj
+++ b/291Project/291Project/291Project.csproj
@@ -90,6 +90,12 @@
     <Compile Include="Customer\InfoEdit.Designer.cs">
       <DependentUpon>InfoEdit.cs</DependentUpon>
     </Compile>
+    <Compile Include="Customer\RemoveQueue.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Customer\RemoveQueue.Designer.cs">
+      <DependentUpon>RemoveQueue.cs</DependentUpon>
+    </Compile>
     <Compile Include="DataSet11.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -204,6 +210,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Customer\InfoEdit.resx">
       <DependentUpon>InfoEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Customer\RemoveQueue.resx">
+      <DependentUpon>RemoveQueue.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Employee\AddCustomer.resx">
       <DependentUpon>AddCustomer.cs</DependentUpon>
